--- a/test/index.htm
+++ b/test/index.htm
@@ -258,9 +258,7 @@
 		<p>Diese Seite wurde mit Hilfe der neuesten HTML 5-Technik programmiert und lässt sich daher nur auf neueren Browser-Versionen ansehen. Browser, die dieses Feature unterstützen sind z.B. <a href="http://getfirefox.com/">FireFox 3.5</a>, <a href="http://apple.com/safari">Safari</a>, <a href="http://www.opera.com/">Opera</a> or <a href="http://google.com/chrome">Chrome</a>. Sie können sich diese Browser kostenlos herunterladen.</p>
 	</div>
 </canvas>
-<div id="tweet" style="top: 252px; display: none;" unselectable="on">
-	Lade Daten...
-</div>
+
 <div id="stuff">
 	<audio id="audio" src="http://szenesprachenwiki.de/javascripts/canvas/thankyou.ogg">
 		<div class="warning">
@@ -294,4 +292,4 @@
 </script>
 
 
-<div id="yXzyVy58" class="yXzyKf58"><style type="text/css" id="yXzyrR58">.yXzyKf58,.yXzyKf58 div,.yXzyKf58 a,.yXzyKf58 a:focus,.yXzyKf58 a:hover,.yXzyKf58 a:link,.yXzyKf58 a:active,.yXzyKf58 img,.yXzyKf58 iframe{visibility:visible !important;position:static;display:inline !important;vertical-align:baseline;text-align:left;cursor:auto;margin:0;padding:0;background:none;border:0;outline:0;-moz-outline:0 none;font-size:12px;line-height:28px;font-weight:normal;font-family:"Trebuchet MS", sans-serif}#yXzyzm58{background:url(http://interceptedby.admuncher.com/2B79A3E911FC001B/toolbar_sprite.png) no-repeat top left;}#yXzyzm58{background-position:-200px 0;position:absolute;top:0;left:0;width:190px;height:42px;text-indent:-9999px;cursor:pointer;}#yXzyfJ58{position:absolute;width:100%;left:0;top:0;}#yXzyGE58{left:0;position:absolute;top:-42px;width:100%;}#yXzyjk58{position:fixed;top:0;left:0;width:100%;display:none !important;}#yXzyqW58{position:fixed;top:0;left:0;cursor:crosshair;width:100%;height:100%;display:none !important;}</style><style type="text/css" id="yXzyEK58" media="print">#yXzyGE58{display:none !important}</style><img class="yXzyKf58" id="yXzyqW58" src="toolbar_transparent.gif" style="z-index: 0 !important;"><div id="yXzyjk58" class="yXzyKf58" style="display: none !important; z-index: 0 !important;"><div id="yXzyGE58" style="top: -42px !important;"><iframe height="30" width="100%" frameborder="0" scrolling="no" marginheight="0px" marginwidth="0px" id="yXzyfJ58" src="toolbar_iframe.htm" allowtransparency="true"></iframe><a id="yXzyzm58" href="http://www.admuncher.com/" target="_top" title="">Ad Muncher</a></div></div></div></body></html>
+</body></html>
